# openbiollm-inference

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: gpu_vllm.yaml  local_gguf.yaml  prompt_template.txt
docker/: Dockerfile.vllm  docker-compose.gpu.yml
src/openbiollm_inference/: __init__.py
src/openbiollm_inference/common/: logging_setup.py  schema.py  templates.py
src/openbiollm_inference/local_m1/: run_gguf.py  run_mlx.py
src/openbiollm_inference/serve_gpu/: fastapi_app.py  vllm_server.py
tests/: test_fastapi_app.py  test_templates.py
